# liveatc-caption

./: .gitignore  .impeccable.md  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  buildServer.json  components.json  eslint.config.mjs  index.html  next.config.js  next.config.mjs  pack_and_run.sh  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vercel-build.sh  vercel.json  vite.config.js
.claude/: launch.json
.zed/: debug.json
Casks/: adsbao.rb  liveatc-caption.rb
api/: constants.py  database.py  index.py  main.py  router.py
app/: layout.tsx
backend/: backend_app.spec  main.py  pyproject.toml
backend/api/router/: airport_catalog.py  caption.py  proxy.py  search.py
backend/knowledge_base/: atc_phraseology.json
backend/models/: search.py  transcription.py
backend/prompts/: transcription_system.txt
backend/services/: base_transcriber.py  claude_transcriber.py  config_store.py  gemini_transcriber.py  rag_service.py  scraper.py  transcriber.py
backend/tests/: test_airport_catalog.py  test_base_transcriber.py
docs/: architecture.md  frontend-vercel-migration.md
frontend/: dev.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  (+2 more)
liveatc_backend/: .gitignore  __init__.py  db.py  liveatc.py  main.py  models.py  pyproject.toml
liveatc_backend/api/: router.py
liveatc_backend/api/endpoints/: airport.py  search.py
liveatc_backend/models/: __init__.py  audio_channel.py  models.py  search.py
liveatc_backend/scripts/: run_migrations.py
liveatc_backend/services/: database.py  db_init.py  liveatc.py
(+222 files in other folders)
