[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2025.11.12",
    "fastapi>=0.125.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pyinstaller>=6.17.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
