[project]
name = "liveatc-backend"
version = "0.1.0"
description = "Backend service for LiveATC audio channel metadata and streaming"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.1",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "supabase>=2.0.3",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2",
    "alembic>=1.13.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.hatch.build.targets.wheel]
packages = ["src/liveatc_backend"]